# LabsOOP

./: .gitignore
1/: CMakeLists.txt  main.cpp
1/include/: timecalc.h
1/src/: timecalc.cpp
1/test/: tests.cpp
2/: CMakeLists.txt  main.cpp
2/include/: thirteen.h  vector13.h
2/src/: thirteen.cpp  vector13.cpp
2/tests/: test13.cpp  tests.cpp  testvector.cpp
3/: CMakeLists.txt  main.cpp
3/include/: figure.h  myfigures.h  point2D.h  vector.h
3/src/: myfigures.cpp  point2D.cpp
3/tests/: test_figure.cpp  test_point2d.cpp  test_vector.cpp
4/: main.cpp
4/include/: figure.hpp  myfigures.hpp  point2D.hpp
4/templates/: myfigures.tpp  point2D.tpp
4/tests/: test_figure.cpp  test_point2d.cpp  test_vector.cpp
5/: CMakeLists.txt  main.cpp
5/include/: allocator.hpp  allocator_demo.hpp  iterators.hpp  myqueue.hpp
5/tests/: test_allocator.cpp  test_iterators.cpp  test_queue.cpp
6/: main.cpp
6-7/: CMakeLists.txt  main.cpp  npclist.txt
6-7/include/: game.hpp  npc.hpp  observer.hpp
6-7/tests/: test_game.cpp  test_npc.cpp
6/include/: game.hpp  npc.hpp
